# promptvault

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: test-analysis.md  usage.md
docs/chronicles/: 0001__2026-03-25__ui-audit__self-improvement-loop.md  0002__2026-03-26__discoveries__claude-code-internals-and-fzf-patterns.md
docs/plans/: 0001__2026-03-25__implementation_plan__claude-prompt-library.md  0001__2026-03-25__research__claude-prompt-library.md
promptvault/: __init__.py  search.py  sync.py
tests/: conftest.py  test_e2e.py  test_hook.py  test_search.py  test_search_coverage.py  test_sync.py  test_sync_coverage.py
